--- a/true-beauty-storefront/src/styles/scss/component/_slider.scss
+++ b/true-beauty-storefront/src/styles/scss/component/_slider.scss
@@ -13,6 +13,63 @@
       will-change: opacity;
     }
   }
+  &__link {
+    --solid-button-background: #ffffff;
+    --solid-button-label: #151515;
+    --color-body: #151515;
+    --color-overlay-rgb: 0, 0, 0;
+    --overlay-opacity: 0.1;
+    span {
+      z-index: 10;
+    }
+    border-color: #fff;
+    text-transform: uppercase;
+    display: inline-flex;
+    cursor: pointer;
+    padding: 7px 30px;
+    align-items: center;
+    justify-content: center;
+    height: 48px;
+    font-size: .875rem;
+    font-weight: 600;
+    letter-spacing: var(--button-letter-spacing, .02em);
+    background: transparent;
+    color: #fff;
+    border-radius: var(--button-border-radius, 0px);
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    z-index: 1;
+    transition: color .25s cubic-bezier(.104,.204,.492,1),background-color .25s cubic-bezier(.104,.204,.492,1),border-color .25s cubic-bezier(.104,.204,.492,1);
+    &:before {
+      transition: all .25s cubic-bezier(.104,.204,.492,1);
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: -5%;
+      width: 125%;
+      height: 100%;
+      z-index: 5;
+      opacity: 1;
+      background: var(--solid-button-background);
+      border-radius: var(--button-border-radius, 0px);
+      transform-origin: bottom left;
+      backface-visibility: hidden;
+      transform: rotate3d(0,0,1,6deg) translate3d(-1.2em,110%,0);
+      will-change: transform;
+    }
+    &:hover {
+      color: var(--color-body);
+      &:before {
+        transform: rotate3d(0,0,1,0) translateZ(0);
+      }
+    }
+  }
 }
 
 .is-selected {
@@ -59,6 +116,19 @@ https://flickity.metafizzy.co
   height: 100%;
 }
 
+.carousel-home {
+  .flickity-viewport {
+    overflow: hidden;
+    position: relative;
+    height: 100vh !important;
+  }
+
+  .flickity-slider {
+    position: absolute;
+    width: 100%;
+    height: 100vh !important;
+  }
+}
 /* draggable */
 
 .flickity-enabled.is-draggable {
@@ -155,7 +225,7 @@ https://flickity.metafizzy.co
 .flickity-page-dots {
   position: absolute;
   width: 100%;
-  bottom: -25px;
+  bottom: 45px;
   padding: 0;
   margin: 0;
   list-style: none;
@@ -167,17 +237,35 @@ https://flickity.metafizzy.co
   direction: rtl;
 }
 
+.carousel .flickity-page-dots .dot {
+  border-color: #fff;
+}
+
+
 .flickity-page-dots .dot {
+  --color-text: #fff;
+  --dot-speed: 10s;
+  width: 8px;
+  height: 8px;
   display: inline-block;
-  width: 10px;
-  height: 10px;
-  margin: 0 8px;
-  background: #333;
-  border-radius: 50%;
-  opacity: 0.25;
+  opacity: .6;
+  border-radius: 4px;
+  margin: 0 10px;
+  background: var(--color-text, #fff);
   cursor: pointer;
+  position: relative;
 }
 
 .flickity-page-dots .dot.is-selected {
   opacity: 1;
+}
+
+.flickity-page-dots .dot .thb-pagination-svg {
+  position: absolute;
+  top: -6px;
+  left: -6px;
+  width: 20px;
+  height: 20px;
+  transform: rotate(-90deg);
+  visibility: hidden;
 }
