--- a/true-beauty-storefront/src/styles/scss/styles.scss
+++ b/true-beauty-storefront/src/styles/scss/styles.scss
@@ -1,3 +1,18 @@
 @import 'component/index';
 
 
+.border-t-1 {
+  border-top-width: 1px;
+}
+
+.border-1 {
+  border-width: 1px;
+}
+
+.body {
+  scroll-behavior: smooth;
+}
+
+.z-60 {
+  z-index: 60;
+}
